feat(navigator): ✨ enhance command tab completion and improve coordinate parsing